--- a/decodificador/plantillas/decodificar_foto.html
+++ b/decodificador/plantillas/decodificar_foto.html
@@ -12,16 +12,13 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
-				<a href="/inicio">Inicio</a>
-			</li>
-			<li>
 				<a href="#">Agregar Foto</a>
 			</li>
 			<li>
-				<a href="#galeria">Ver Galería</a>
+				<a href="/inicio/galeria">Ver Galería</a>
 			</li>
 			<li>
-				<a href="#decodificar">Decodificar Foto</a>
+				<a href="/inicio/decodificar">Decodificar Foto</a>
 			</li>
 			<li>
 				<a href="/cerrar">Cerrar Sesión</a>
