--- a/decodificador/plantillas/user.html
+++ b/decodificador/plantillas/user.html
@@ -15,10 +15,10 @@
 				<a href="#">Agregar Foto</a>
 			</li>
 			<li>
-				<a href="#galeria">Ver Galería</a>
+				<a href="/inicio/galeria">Ver Galería</a>
 			</li>
 			<li>
-				<a href="#decodificar">Decodificar Foto</a>
+				<a href="/inicio/decodificar">Decodificar Foto</a>
 			</li>
 			<li>
 				<a href="/cerrar">Cerrar Sesión</a>
