--- a/decodificador/plantillas/busqueda.html
+++ b/decodificador/plantillas/busqueda.html
@@ -12,7 +12,7 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
-				<a href="#">Iniciar Sesión</a>
+				<a href="/inicio">Iniciar Sesión</a>
 			</li>
 		</ul>
 	</nav>
@@ -33,8 +33,10 @@
                 <table>
                 <tr><th>Autor</th> <th>Imagen</th> </tr>
                 {% for item in resultados %}
+                <tr>
                     <td>{{item.usuario}}</td>
                     <td><a href="/media/{{item.imagen}}">{{item.titulo}}</a></td>
+                </tr>
                 {% endfor %}
                 </table>
             </div>
