--- a/decodificador/plantillas/decodificar_foto.html
+++ b/decodificador/plantillas/decodificar_foto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Usuario</title>
+	<title>Pagina</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Estilos-->
@@ -12,13 +12,16 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
-				<a href="#">Agregar Foto</a>
+				<a href="/inicio">Inicio</a>
+			</li>
+			<li>
+				<a href="/inicio/subir">Agregar Foto</a>
 			</li>
 			<li>
 				<a href="/inicio/galeria">Ver Galería</a>
 			</li>
 			<li>
-				<a href="/inicio/decodificar">Decodificar Foto</a>
+				<a href="#">Decodificar Foto</a>
 			</li>
 			<li>
 				<a href="/cerrar">Cerrar Sesión</a>
