--- a/decodificador/plantillas/galeria.html
+++ b/decodificador/plantillas/galeria.html
@@ -12,10 +12,13 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
-				<a href="#">Agregar Foto</a>
+				<a href="/inicio">Inicio</a>
 			</li>
 			<li>
-				<a href="/inicio/galeria">Ver Galería</a>
+				<a href="/inicio/subir">Agregar Foto</a>
+			</li>
+			<li>
+				<a href="#">Ver Galería</a>
 			</li>
 			<li>
 				<a href="/inicio/decodificar">Decodificar Foto</a>
