--- a/decodificador/plantillas/index.html
+++ b/decodificador/plantillas/index.html
@@ -12,6 +12,9 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
+				<a href="/">Buscar</a>
+			</li>
+			<li>
 				<a href="#">Iniciar Sesión</a>
 			</li>
 		</ul>
