--- a/decodificador/plantillas/busqueda.html
+++ b/decodificador/plantillas/busqueda.html
@@ -12,7 +12,7 @@
 	<nav id="nav">
 		<ul class="container">
 			<li>
-				<a href="/inicio">Iniciar Sesión</a>
+				<a href="/ingresar">Iniciar Sesión</a>
 			</li>
 		</ul>
 	</nav>
