--- a/decodificador/plantillas/subir_archivos.html
+++ b/decodificador/plantillas/subir_archivos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Usuario</title>
+	<title>Pagina</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Estilos-->
@@ -15,10 +15,10 @@
 				<a href="/inicio">Inicio</a>
 			</li>
 			<li>
-				<a href="/inicio/subir">Agregar Foto</a>
+				<a href="#">Agregar Foto</a>
 			</li>
 			<li>
-				<a href="#galeria">Ver Galería</a>
+				<a href="/inicio/galeria">Ver Galería</a>
 			</li>
 			<li>
 				<a href="/inicio/decodificar">Decodificar Foto</a>
